# Mythic-World-Model

./: .gitignore  CLAUDE.md  README.md  mtw_schema.md  mythic_world_model_constitution.md  pyproject.toml  requirements.txt
concepts/: CONCEPTS_LAYER.md  __init__.py  concepts_db.py
database/: __init__.py  db.py
evidence/: EVIDENCE_LAYER.md  __init__.py  evidence_db.py
hypotheses/: HYPOTHESES_LAYER.md  __init__.py  hypotheses_db.py
lm_client/: lm_studio_client.py  prompt_builder.py
models/: MODELS_LAYER.md  __init__.py  models_db.py
ontology/: ONTOLOGY_LAYER.md  __init__.py  ontology_db.py
predictions/: PREDICTIONS_LAYER.md  __init__.py  predictions_db.py
signals/: SIGNALS_LAYER.md  __init__.py  signals_db.py
sources/: SOURCES_LAYER.md  __init__.py  source_extraction.py  sources_db.py
sources/prompts/: CREDIBILITY_SCORE_PROMPT.md  EXTRACT_AUTHORSHIP_PROMPT.md  EXTRACT_DATE_PROMPT.md  EXTRACT_METADATA_PROMPT.md  EXTRACT_TITLE_PROMPT.md  SOURCE_SUMMARY_PROMPT.md  VERIFY_SOURCE_PROMPT.md
world_models/: WORLD_MODELS_LAYER.md  __init__.py  world_models_db.py
