[project]
name = "mythic-world-model"
version = "0.1.0"
description = "A living knowledge graph for modeling the contemporary zeitgeist"
requires-python = ">=3.11"

[project.scripts]
mythic = "src.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
